--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -7,12 +7,13 @@
 		#febf1e 270deg,
 		#5792eb 360deg
 	);
-	padding: 10px;
+	padding: 6px;
 }
 .img_aboutContainer img {
 	width: 100%;
 	height: 100%;
 }
+
 @media screen and (max-width: 840px) {
 	.aboutContainer {
 		font-size: 15px;
@@ -21,5 +22,9 @@
 @media screen and (min-width: 841px) {
 	.aboutContainer {
 		font-size: 25px;
+	}
+	.text_aboutContainer {
+		font-size: 18px;
+		line-height: 2rem;
 	}
 }
