--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -1,8 +1,11 @@
-.btn {
-    background: linear-gradient(to right, #fd7e14, #ea4b1f);
-    width: 161px;
-    height: 52px;
-    color: #fff;
-    border-radius: 10px;
-    font-size: 20px;
+.btn,
+.btn:hover,
+.btn:active,
+.btn:focus {
+	background: linear-gradient(to right, #fd7e14, #ea4b1f);
+	width: 161px;
+	height: 52px;
+	color: #fff;
+	border-radius: 10px;
+	font-size: 20px;
 }
