--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -15,15 +15,19 @@ footer {
 @media screen and (min-width: 841px) {
 	.footer-gridContainer {
 		display: grid;
-		grid-template-columns: repeat(5, 1fr);
+		grid-template-columns: repeat(4, 1fr);
+		gap: 20px;
 	}
 	footer {
-		font-size: 20px;
+		font-size: 14px;
+	}
+	.copy {
+		margin: 0 auto;
 	}
 }
 @media screen and (max-width: 840px) {
 	footer {
-		font-size: 13px;
+		font-size: 12px;
 	}
 	.head {
 		font-size: 18px;
